<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/transparent_dialog_inset_10_30"
    android:maxHeight="300dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/historyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/history_dialog_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/dark_blue" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/historyHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ListView
                android:id="@+id/Histories"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:descendantFocusability="blocksDescendants"
                android:focusable="false"
                android:longClickable="false"
                android:scrollbarSize="4dp"
                android:scrollbarThumbVertical="@color/teal"
                android:smoothScrollbar="true" />

            <TextView
                android:id="@+id/noHistoryPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="35dp"
                android:paddingBottom="35dp"
                android:textSize="18sp"
                android:visibility="gone" />
        </LinearLayout>


        <View
            android:id="@+id/descriptionDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="0"

            android:background="@color/dark_blue" />

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/historyBackButton"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:text="@string/back"
                tools:ignore="NestedWeights" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/historyClearAllButton"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:text="@string/clearALL"
                tools:ignore="NestedWeights" />

        </LinearLayout>
    </LinearLayout>
    <!--android:divider="@android:color/transparent"-->
</com.google.android.material.card.MaterialCardView>